# bloomhub-be

./: .env.example  .gitignore  .pre-commit-config.yaml  GARDENER.md  README.md  bloomhub_all_roles_permissions.csv  conftest.py  docker-compose.yml  example.csv  init_db.sh  langgraph.json  permissions.csv  pyproject.toml  requirements.txt  roles.csv  schema.yaml  schema.yml  seed_leave_analytics.py  seed_leave_data.py  test_output.txt  test_settings.py  test_swagger.py
.langgraph_api/: .langgraph_ops.pckl
config/: middleware.py  settings.py  storage.py  urls.py
core/: admin.py  avatar_utils.py  choice_fields.py  constants.py  enums.py  models.py  org_chart.py  permissions.py  serializers.py  urls.py  utils.py  views.py
core/ai/: api.py  (+13 more)
scripts/: check_tempo_oauth.py  run_local_hook.py  run_pytest_parallel.py
tenants/: admin.py  models.py
tests/: test_ai_agent_tools.py  test_ai_chat_api.py  test_ai_usage.py  test_announcement_notifications.py  test_announcements_api.py  test_announcements_models.py  test_asset_api.py  test_asset_management.py  test_auth.py  test_auth_google.py  test_celebrations_api.py  test_compensation_api.py  test_core_commands.py  test_core_coverage_boost.py  test_core_document_service.py  test_core_document_signature_service.py  test_core_leave_service.py  test_core_mail_and_notifications.py  test_core_permissions.py  test_core_support_modules.py  test_coverage_weak_spots.py  test_cpf_level_change_api.py  test_documents_api.py  test_employee_introduction_announcements.py  test_employee_profiles.py  test_jira_oauth.py  test_job_board_api.py  (+23 more)
(+202 files in other folders)
